Fixed package metadata and manifest.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,4 +2,4 @@ include MANIFEST
 include MANIFEST.in
 include setup.py
 include *.txt
-recursive-include src *.py
+recursive-include stoneagehtml *.py
